[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-guard"
version = "1.0.1"
description = "Production security layer for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Nick Constantinou", email = "nick@example.com"}
]
keywords = ["ai", "security", "prompt-injection", "jailbreak", "openclaw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7    "pytest-as.4",
yncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]
llm-guard = [
    "llm-guard>=0.1",
]

[project.scripts]
prompt-guard = "prompt_guard.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["prompt_guard"]
